# rust-crate-scaffolding

./: AGENTS.md  Cargo.toml
_/: README.md  change-map.md  overview.md
src/: ast.rs  codegen.rs  helpers.rs  lib.rs  model.rs
src/crud/: ast.rs  mod.rs  model.rs
src/crud/codegen/: annotations.rs  handlers.rs  repository.rs  repository_impl.rs
src/repository/: ast.rs  mod.rs  model.rs
src/repository/codegen/: handlers.rs  placeholder.rs  repository.rs
