[package]
name = "fractic-crate-scaffolding"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = "^0.9.0"
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
futures-util = "^0.3.31"
proc-macro2 = "^1.0.103"
quote = "^1.0.42"
syn = { version = "^2.0.110", features = ["extra-traits"] }
